fix some line wrapping stuff

--- a/src/components/DevTools/Network/components/NetworkEventDetailPanel/NetworkEventDetailPanel.module.scss
+++ b/src/components/DevTools/Network/components/NetworkEventDetailPanel/NetworkEventDetailPanel.module.scss
@@ -22,7 +22,6 @@
     position: relative;
 }
 
-.jsonArea {
-    border: 1px solid lightgray;;
+.requestUrl {
     word-wrap: break-word;
 }
